# macrond

./: .gitignore  Cargo.toml  README.md
docs/: PRD.md
scripts/: package.sh
src/: app.rs  cli.rs  config.rs  daemon.rs  logging.rs  main.rs  model.rs  paths.rs  scheduler.rs  tui.rs
