[package]
name = "macrond"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cron = "0.12"
crossterm = "0.29"
dialoguer = "0.12"
nix = { version = "0.30", features = ["signal"] }
notify = "8.2"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47", features = ["full"] }
uuid = { version = "1.18", features = ["v4"] }
